--- a/src/input.css
+++ b/src/input.css
@@ -11,3 +11,45 @@ div {
   scrollbar-width: thin;
   scrollbar-color: #141414 #141414;
 }
+
+div::-webkit-scrollbar {
+  display: none;
+}
+
+div#wave {
+	position:relative;
+	/* margin-top:12px; */
+	text-align:center;
+	width:30px;
+	height:12px;
+	margin-left: auto;
+	margin-right: auto;
+  padding-bottom: 10px;
+	.dot {
+		display:inline-block;
+		width:6px;
+		height:6px;
+		border-radius:50%;
+		margin-right:3px;
+		background:#474747;
+		animation: wave 1.3s linear infinite;
+
+		&:nth-child(2) {
+			animation-delay: -1.1s;
+		}
+
+		&:nth-child(3) {
+			animation-delay: -0.9s;
+		}
+	}
+}
+
+@keyframes wave {
+	0%, 60%, 100% {
+		transform: initial;
+	}
+
+	30% {
+		transform: translateY(-15px);
+	}
+}
